[REFACTOR] 코드 정리